Fix letter-spacing

--- a/app/assets/stylesheets/empresaula/_typography.sass
+++ b/app/assets/stylesheets/empresaula/_typography.sass
@@ -5,6 +5,7 @@
 body
   h1, h2, h3
     font-family: "Museo"
+    letter-spacing: -1px
 
   h1, h2
     font-weight: bold
